--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ h1 {
 
 .app::before {
   content: "";
-  background: url(./images/Bg.jpg) no-repeat center center/cover;
+  /* background: url(./images/Bg.jpg) no-repeat center center/cover; */
   position: absolute;
   width: 100%;
   height: 100%;
@@ -161,15 +161,37 @@ h1 {
   }
 }
 
+@media (max-height: 760px) {
+  .container{
+    width: auto;
+    height: 500px;
+  }
+}
+
 @media (max-height: 600px) {
-  .container {
-    height: auto;
+  .container{
+    width: auto;
+    height: 150px;
+  }
+}
+
+@media (max-width: 250px) {
+  .container .top .temp h1{
+    font-size: 2rem;
+  }
+  /* .app .searchBox{
+    width: 150px;
+  } */
+  .app input{
+    width: 100px;
   }
 
-  .app .searchBox,
-  .app .btn {
-    padding: 0.5rem 1rem; /* Adjust padding for smaller heights */
-    font-size: 1rem; /* Adjust font size for smaller heights */
+  .app .searchBox button{
+    font-size: 1.2rem;
+  }
+
+  .container p{
+    font-size: 1.2rem;
   }
 }
 
