--- a/src/index.css
+++ b/src/index.css
@@ -1,199 +1,15 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-p {
-  font-size: 1.6rem;
-}
-
 body {
   margin: 0;
+  background: linear-gradient(papayawhip, white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-p {
-  font-size: 1.6rem;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
-
-h1 {
-  font-size: 6rem;
-}
-
-.app {
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  background-color: rgba(0, 0, 0, 0.4);
-  color: #fff;
-}
-
-.app::before {
-  content: "";
-  /* background: url(./images/Bg.jpg) no-repeat center center/cover; */
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-
-.app .searchBox,
-.btn {
-  text-align: center;
-  padding: 1rem;
-  background: transparent;
-}
-
-.app input {
-  padding: 0.7rem 1.5rem;
-  font-size: 1.2rem;
-  border-radius: 25px;
-  border: 1px solid rgba(255, 255, 255, 0.8);
-  background: transparent;
-  color: #f8f8f8;
-}
-
-.app .btn {
-  padding: 0.7rem 1.5rem;
-  font-size: 1.2rem;
-  border-radius: 25px;
-  border: 1px solid transparent;
-  background: transparent;
-  color: #f8f8f8;
-  cursor: pointer;
-}
-
-::placeholder {
-  color: #f8f8f8;
-}
-
-.container {
-  max-width: 600px;
-  height: 600px;
-  margin: auto;
-  padding: 0 1rem;
-  position: relative;
-  top: 10%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-
-
-.app .top {
-  width: 100%;
-  margin: 1rem auto;
-}
-
-.app .description {
-  position: relative;
-  right: -90%;
-  transform-origin: 0 0;
-  transform: rotate(269deg);
-}
-
-.app .bottom {
-  display: flex;
-  justify-content: space-evenly;
-  text-align: center;
-  width: 100%;
-  margin: 1rem auto;
-  height: auto;
-  padding: 1rem;
-  border-radius: 12px;
-  background-color: rgba(255, 255, 255, 0.2);
-}
-
-.bold {
-  font-weight: 700;
-}
-
-@media (max-width: 420px) {
-  /* .container {
-    max-width: 500px;
-    height: 500px;
-  } */
-
-  .container .bottom{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .container .description{
-    width: 100%;
-  margin: 1rem auto;
-  position: relative;
-  right: 0%;
-  /* transform-origin: 0 0; */
-  transform: none;
-  }
-
-  .app .searchBox,
-  .app .btn {
-    width: auto;
-    padding: 0.7rem 1.5rem;
-  }
-}
-
-@media (max-width: 370px) {
-  .container .top .temp h1{
-    font-size: 5rem;
-  }
-}
-
-@media (max-width: 327px) {
-  .container .top .temp h1{
-    font-size: 4rem;
-  }
-  /* .app .searchBox{
-    width: 150px;
-  } */
-  .app input{
-    width: 220px;
-  }
-}
-
-@media (max-height: 760px) {
-  .container{
-    width: auto;
-    height: 500px;
-  }
-}
-
-@media (max-height: 600px) {
-  .container{
-    width: auto;
-    height: 150px;
-  }
-}
-
-@media (max-width: 250px) {
-  .container .top .temp h1{
-    font-size: 2rem;
-  }
-  /* .app .searchBox{
-    width: 150px;
-  } */
-  .app input{
-    width: 100px;
-  }
-
-  .app .searchBox button{
-    font-size: 1.2rem;
-  }
-
-  .container p{
-    font-size: 1.2rem;
-  }
-}
-
-
-
